<resources>
    <string name="app_name">PWManager</string>

    <!-- Strings related to login -->
    <string name="app_guid_token">e97fc952-22f4-4109-9d8e-31714e56b3aa</string>
    <string name="title_login_activity">Login</string>
    <string name="hint_login_id">Login ID</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to fingerprint login -->
    <string name="prompt_fingerprint_sensor">Touch Sensor</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Accounts</string>
    <string name="title_notifications">Notifications</string>


    <!-- Strings related to Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_account_name">Account Name/Site</string>
    <string name="hint_account_username">Login Id, Username, Email, etc.</string>
    <string name="hint_account_password">Password</string>
    <string name="hint_sec_questions">Security Questions, Emails, etc.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
