<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?metaButtonBarStyle"
    android:id="@+id/account_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".AccountDetailsFragment"
    tools:ignore="UselessParent"
    tools:layout_editor_absoluteX="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_account_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_name"
        app:layout_constraintLeft_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_username"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/hint_login_id"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_login" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_password"
            android:inputType="textWebPassword"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_account_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_password"
        app:layout_constraintLeft_toRightOf="parent"
        android:textAlignment="textStart">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_sec_questions"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:hint="@string/hint_sec_questions"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:textAlignment="textStart"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/saveRecord_Img"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="right"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:minHeight="36dp"
        android:minWidth="36dp"
        app:layout_constraintEnd_toStartOf="@+id/addRecord_Img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_options"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <ImageView
        android:id="@+id/addRecord_Img"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_gravity="right"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:minHeight="36dp"
        android:minWidth="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_options"
        app:srcCompat="@drawable/ic_playlist_add_black_24dp" />


</android.support.constraint.ConstraintLayout>